https://numworx.atlassian.net/browse/DWOPLAY-510
met uitstapjes naar antwoordkeuzevak en antwoordtekstvak2